--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 {
     "manifest_version": 2,
     "name": "Lingos_Bot",
-    "description": "Lingos bot Effekt 4 - Kapitel 2",
-    "version": "1.0.2",
+    "description": "Lingos:Automata",
+    "version": "2.0.0",
     "content_scripts": [
         {
             "matches": [ "*://*.lingos.pl/*"],
